# aoc_2020

./: CMakeLists.txt
day_01/: main.cpp
day_02/: main.cpp
day_03/: main.cpp
day_04/: main.cpp
day_05/: main.cpp
day_06/: main.cpp  small_input
day_07/: main.cpp
