cmake_minimum_required(VERSION 3.17..)
project(aoc_2020 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(day01 day_01/main.cpp)
add_executable(day02 day_02/main.cpp)
add_executable(day03 day_03/main.cpp)
add_executable(day04 day_04/main.cpp)
add_executable(day05 day_05/main.cpp)
add_executable(day06 day_06/main.cpp)
